--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	
+	<div class="text" id="text">klfvmkfnvjgnjgjfgnfvvddnfmkgnjfkgbnfjkbnkjfgnjkkjfvnjfkgnbnv kjfbvkjfgbjkfngkjbnkjggbnjkgnbkjngbkjgfnbkjfgbnnnnnnjvfvjkjgnb
+	gjbngjkbnkjgnbkjbbbbbbjknbjkrgnbjrtg[pmfrngrngrjngrg</div>	
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
