--- a/main.html
+++ b/main.html
@@ -9,8 +9,11 @@
 <body>
 	<!-- the entire body must be written by student -->
 	
-	<div class="text" id="text">klfvmkfnvjgnjgjfgnfvvddnfmkgnjfkgbnfjkbnkjfgnjkkjfvnjfkgnbnv kjfbvkjfgbjkfngkjbnkjggbnjkgnbkjngbkjgfnbkjfgbnnnnnnjvfvjkjgnb
-	gjbngjkbnkjgnbkjbbbbbbjknbjkrgnbjrtg[pmfrngrngrjngrg</div>	
+<div class="parent">
+	<div class="child">
+		<div class="test">MynameisHTMLansCSS</div>
+	</div>
+</div>
 	
     <script type="text/javascript" src="./script.js">
 </script>
